Kick Off Material zugefügt.

--- a/_webtechnologien/10-topic-2018.md
+++ b/_webtechnologien/10-topic-2018.md
@@ -13,7 +13,7 @@ Folgende Themen, bezogen auf die vier Hauptbereiche der Veranstaltung, werden in
 
 ### Direction: JAMstack
 
- "Static is the new dynamic", ist einer der Slogans, der in den letzten Monaten immer wieder vom JAMstack Lager in der Web-Developer Gemeinde widerhallt. Tatsächlich bietet JAMstack als Architekturansatz und die damit verbundenen Technologien und Konzepte einige wirklich interessante Möglichkeiten. Im Rahmen des werden verschiedene Ansätze am Beispiel eines Community Website Projekts implementiert und bewertet. Dabei stehen folgende Ziele im Fokus:
+ "Static is the new dynamic", ist einer der Slogans, der in den letzten Monaten immer wieder vom JAMstack Lager in der Web-Developer Gemeinde widerhallt. Tatsächlich bietet JAMstack als Architekturansatz und die damit verbundenen Technologien und Konzepte einige wirklich interessante Möglichkeiten. Im Rahmen der Veranstaltung werden verschiedene Ansätze am Beispiel eines Community Website Projekts implementiert und bewertet. Dabei stehen folgende Ziele im Fokus:
 - GIT Managed Content
 - Reusable, Structured Content
 - Meaningful URL for every Page (or Piece) of Content
