Veranstaltungsplan WT 2019 aktualisiert.

--- a/_webtechnologien/_archiv/10-topic-2018.md
+++ b/_webtechnologien/_archiv/10-topic-2018.md
@@ -1,19 +1,19 @@
 ---
 layout: einspalter
-titel: Themen Sommersemester 2018
+titel: Themen Sommersemester 2019
 verantwortlich: cn
 published: true
 ---
 
 {% include functions/resolve-urls.html target="issues" %}
 
-## Themen Sommersemester 2018
+## Themen Sommersemester 2019
 
 Folgende Themen, bezogen auf die vier Hauptbereiche der Veranstaltung, werden in diesem Semester bearbeitet. Die Liste ist offen. Vorschläge für weitere/ andere Themen bitte in die {{link}}.
 
 ### Direction: JAMstack
 
- "Static is the new dynamic", ist einer der Slogans, der in den letzten Monaten immer wieder vom JAMstack Lager in der Web-Developer Gemeinde widerhallt. Tatsächlich bietet JAMstack als Architekturansatz und die damit verbundenen Technologien und Konzepte einige wirklich interessante Möglichkeiten. Im Rahmen der Veranstaltung werden verschiedene Ansätze am Beispiel eines Community Website Projekts implementiert und bewertet. Dabei stehen folgende Ziele im Fokus:
+ "Static is the new dynamic", ist einer der Slogans, der einiger Zeit immer wieder vom JAMstack Lager in der Web-Developer Gemeinde widerhallt. Tatsächlich bietet JAMstack als Architekturansatz und die damit verbundenen Technologien und Konzepte einige wirklich interessante Möglichkeiten. Im Rahmen der Veranstaltung werden verschiedene Ansätze am Beispiel eines Community Website Projekts implementiert und bewertet. Dabei stehen folgende Ziele im Fokus:
 - GIT Managed Content
 - Reusable, Structured Content
 - Meaningful URL for every Page (or Piece) of Content
@@ -23,9 +23,12 @@ Folgende Themen, bezogen auf die vier Hauptbereiche der Veranstaltung, werden in
 - Good Perceived Performance
 - Minimal Hosting Complexity
 
+Im Modul Web-Development war das Thema JAMstack im letzten Jahr schon auf der Agenda. 
+
+
 ### Cooperation: Guidelines, Codeconventions und Co.
 
-Wie, auf welcher Basis und mit welchen Hilfsmitteln organisieren, strukturieren und optimieren wir die Arbeit und den Code im Team? Welche Probleme ergeben sich beim arbeitsteiligen Development? Inwieweit helfen Tools, Guidelines und Methodologien beim Web-Development und welche Auswirkungen haben sie auf das Projekt und den resultierenden Code? 
+Wie, auf welcher Basis und mit welchen Hilfsmitteln organisieren, strukturieren und optimieren wir die Arbeit und den Code im Team? Welche Probleme ergeben sich beim arbeitsteiligen Development? Inwieweit helfen Tools, Guidelines und Methodologien beim Web-Development und welche Auswirkungen haben sie auf das Projekt und den resultierenden Code? In diesem Jahr mit einem Fokus auf CSS Methodologien.
 
 ### Structure: MI Communicate
 
