--- a/_webtechnologien/_archiv/10-topic-2019.md
+++ b/_webtechnologien/_archiv/10-topic-2019.md
@@ -1,13 +1,13 @@
 ---
 layout: einspalter
-titel: Themen Sommersemester 2019
+titel: Themenschwerpunkt Sommersemester 2020
 verantwortlich: cn
 published: true
 ---
 
 {% include functions/resolve-urls.html target="issues" %}
 
-## Themen Sommersemester 2019
+## Themenschwerpunkt Sommersemester 2020
 
 Folgende Themen, bezogen auf die vier Hauptbereiche der Veranstaltung, werden in diesem Semester bearbeitet. Die Liste ist offen. Vorschläge für weitere/ andere Themen bitte in die {{link}}.
 
